welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:10: error: value litMessage is not a member of object java.awt.Color
    T(i)=(Color.litMessage())
                ^